# protocol-assignment-takehome

./: .gitignore  .rust-analyzer.toml  Cargo.toml  README.md  TAKEHOME.md
docs/: nonce_mechanism.md  overview.md  p256_webauthn_implementation.md
src/: allocator.rs  entrypoint.rs  errors.rs  lib.rs
src/instructions/: execute_instructions.rs  execute_instructions_sessioned.rs  initialize_external_account.rs  mod.rs  refresh_session_key.rs
src/state/: mod.rs
src/state/externally_signed_account/: account.rs  execution_account.rs  mod.rs  schemes.rs  session_key.rs  traits.rs
src/state/p256_webauthn/: account_data.rs  derive_account_args.rs  initialization_args.rs  mod.rs  seeds.rs  trait_impl.rs  verification_args.rs
src/utils/: checks.rs  initialize_account.rs  instructions.rs  mod.rs  nonce.rs  precompiles.rs  sha256.rs  slothashes.rs  small_vec.rs
src/utils/signatures/: mod.rs
tests/: mod.rs
tests/p256/: account_authentication.rs  account_initialization.rs  account_session_authentication.rs  account_sessioned_execution.rs  auth_data_validation.rs  mod.rs  tx_size_testing.rs
tests/p256/keypairs/: ao785vbudKtGbgFfGeN1EddSbnEZoZCPbXJ7qE46fjv.json  bHAthMdZf1ALorgHWaarb71KH7q1LgHn1ZcEfmDwSTw.json  sesfSDjioiWGpxqSoHSfMGrQe3wAyEBDSAL3niVecdC.json  sinf1bu1CMQaMzeDoysAU7dAp2gs5j2V3vM9W5ZXAyB.json
tests/p256/utils/: authentication.rs  ec_recover.rs  execute_sessioned_instructions.rs  initialization.rs  instruction_and_payload_generation.rs  mod.rs  parser.rs  refresh_session_key.rs  secp256r1_instruction.rs  svm.rs
(+12 files in other folders)
