[package]
name = "external-signature-program"
version = "0.1.0"
edition = "2021"

[package.metadata.solana]
program-id = "ExtSgUPtP3JyKUysFw2S5fpL5fWfUPzGUQLd2bTwftXN"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
pinocchio = "0.8.4"
bytemuck = { version = "1.21.0", features = ["derive"] }
pinocchio-log = "0.4.0"
pinocchio-system = "0.2.2"
base64 = "0.22.1"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
pinocchio-pubkey = "0.2.4"
serde = { version = "1.0.219", features = ["derive"] }
borsh = { version = "1.5.7", features = ["derive"] }
num_enum = "0.7.3"
thiserror = "2.0.12"




[dev-dependencies]
openssl = "0.10.71"
solana-feature-set = "2.2.1"
solana-keypair = "2.2.1"
solana-message = "2.2.1"
solana-program = {version= "2.2.1"}
solana-system-interface = "1.0.0"
solana-pubkey = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-secp256r1-program = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.1"
solana-transaction-error = "2.2.1"
solana-signature = "2.2.1"
solana-nostd-sha256 = "0.1.3"
sha2 = "0.10.8"
litesvm = "0.6.1"
serde_cbor = "0.11.2"
hex = "0.4.3"
bincode = "1.3.3"
solana-slot-hashes = "2.2.1"
solana-hash = "2.2.1"
solana-rpc-client = "2.2.1"
tokio = "1.45.1"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(exe)'] }
